FIX: Alteração da utilização do método removeFirst para versão compatível com SDK utilizado